added DELETE route
